# python-bamboo-api

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
bamboo/: __init__.py  api.py  config.py  exceptions.py  requests_utils.py  validation.py
tests/: __init__.py  configuration.ini  conftest.py  db.json  json-server.json  middleware_json_server.js  package-lock.json  package.json  reference_data.json  routes.json  test_get_artifacts.py  test_query_for_artifacts.py  test_query_plan.py  test_stop_build.py  test_trigger_plan.py
tests/public/assets/html/: artifacts.html
